--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100;400;700&display=swap');
 
 @tailwind base;
 @tailwind components;
@@ -13,5 +13,6 @@ body {
     color: rgb(var(--foreground-rgb));
     background: rgb(var(--background-rgb));
     font-family: 'Josefin Sans', sans-serif;
+    font-weight: 100;
     background-color: #FAFAFA;
 }
