Final nodes version

--- a/spec/css_scaffold.css
+++ b/spec/css_scaffold.css
@@ -11,7 +11,7 @@
   --color-gray-border: #DDDDDD;
 
   /* Font Stacks */
-  --font-main: 'Josefin Sans', 'Century Gothic', sans-serif;
+  --font-main: 'DM Sans', 'Century Gothic', sans-serif;
   --font-secondary: 'PT Serif', serif;
 
   /* Font Sizes */
